--- a/grupo/Sites/public/cadastro.html
+++ b/grupo/Sites/public/cadastro.html
@@ -176,7 +176,7 @@
                     </label>
                 </div>
                 <div class="linha-input">
-                    <label class="w-100">
+                    <label class="w-100">30D227
                         <span>Confirme sua Senha:</span>
                         <input type="password" id="ipt_confirme_senha" placeholder="">
                     </label>
