--- a/grupo/Sites/public/cadastro.html
+++ b/grupo/Sites/public/cadastro.html
@@ -481,7 +481,7 @@
                 console.log("resposta: ", resposta);
 
                 if (resposta.ok) {
-                    div_carregamento.innerHTML = `Cadastro realizado com sucesso! Redirecionando para tela de Login...<br>
+                    div_carregamento.innerHTML = `<span>Cadastro realizado com sucesso! Redirecionando para tela de Login...</span><br><br>
                     <img src="./src/imagens/loading.gif" alt="" width = '100px'>`;
                         
                     setTimeout(() => {
